--- a/config.json
+++ b/config.json
@@ -1,123 +1,35 @@
 [
-  {
-     "title":"Vidéos",
+   {
+    "title":"تحديث التطبيق",
     "drawable":"",
-    "submenu":"",
-    "iap":false,
-    "tabs":[
-
-	 {
-        "title":"OM",
-        "provider":"youtube",
-        "arguments":[
-          "PLaGQXPkoq2ym1dferFSnMocpzjkotF8DX",
-          "playlist"
-
-        ]
-     },
-
-	        {
-        "title":"Coupe du monde",
-        "provider":"youtube",
-        "arguments":[
-          "LLpH6zd2mjaicUn4ONhRP0GQ",
-          "playlist"
-
-        ]
-      },
-	        {
-        "title":"Humour",
-        "provider":"youtube",
-        "arguments":[
-          "PLaGQXPkoq2ylQ9xu33JERjwbOibjEU10S",
-          "playlist"
-
-        ]
-      },
-      {
-        "title":"Polémique",
-        "provider":"youtube",
-        "arguments":[
-          "PLaGQXPkoq2ynMtn0GGLfK-zRo1UuMsYQ5",
-          "playlist"
-
-        ]
-      },
-	    {
-        "title":"Politique",
-        "provider":"youtube",
-        "arguments":[
-          "PLaGQXPkoq2ymPlKg7Dla_6y0yfNU28nfI",
-          "playlist"
-
-        ]
-      },
-	  	  	   {
-        "title":"Clash",
-        "provider":"youtube",
-        "arguments":[
-          "PLaGQXPkoq2ylJ2PoeXyoN_jSzXnsHYTfT",
-          "playlist"
-
-        ]
-      }
-	  ,
-	  	  	   {
-        "title":"Divers",
-        "provider":"youtube",
-        "arguments":[
-          "PLaGQXPkoq2ykFZXWYWc5DALW3y2V54CTj",
-          "playlist"
-
-        ]
-      }
-	     
-  ]
-  }
-  ,
-	  {
-    "title":"Trop de Pubs??",
-    "drawable":"",
-    "submenu":"autres",
+    "submenu":"هته النسخة لم تعد صالحة",
     "iap":false,
     "tabs":[
       {
-        "title":"",
-        "provider":"custom",
+        "title":"WebView",
+        "provider":"webview",
         "arguments":[
-          "com.medooapps.tnews.SettingsFragment", "fragment"
+          "http://www.mobiapps.xyz/livefoot.html"
         ]
       }
     ]
-  }
-	,
+
+  },
+   
+	
+	
+
   {
-    "title":"DocuFR NoADS bientôt  disponible",
+    "title":"عن التطبيق",
     "drawable":"",
-    "submenu":"autres",
+    "submenu":"Other",
     "iap":false,
     "tabs":[
       {
         "title":"",
         "provider":"custom",
         "arguments":[
-          "com.medooapps.tnews.SettingsFragment", "fragment"
-        ]
-      }
-    ]
-  }
-	,
-  {
-    "title":"A propos",
-    "drawable":"",
-    "submenu":"autres",
-    "iap":false,
-    "tabs":[
-      {
-        "title":"",
-        "provider":"custom",
-        "arguments":[
-          "com.medooapps.tnews.SettingsFragment", "fragment"
+          "com.med.appm.coupemonde.SettingsFragment", "fragment"
         ]
       }
     ]
