--- a/config.json
+++ b/config.json
@@ -1,15 +1,200 @@
 [
-   {
-    "title":"تحديث التطبيق",
+ 
+	  {
+   "title":"الشروق",
     "drawable":"",
-    "submenu":"هته النسخة لم تعد صالحة",
+    "submenu":"جرائد",
     "iap":false,
     "tabs":[
       {
         "title":"WebView",
         "provider":"webview",
         "arguments":[
-          "http://medooappli.xyz/update.html"
+          "http://www.alchourouk.com"
+        ]
+      }
+    ]
+
+  },
+	{
+   "title":"المصدر",
+    "drawable":"",
+    "submenu":"جرائد",
+    "iap":false,
+    "tabs":[
+      {
+        "title":"WebView",
+        "provider":"webview",
+        "arguments":[
+          "https://ar.webmanagercenter.com/"
+        ]
+      }
+    ]
+
+  },
+	
+	{
+   "title":"اخر خبر",
+    "drawable":"",
+    "submenu":"جرائد",
+    "iap":false,
+    "tabs":[
+      {
+        "title":"WebView",
+        "provider":"webview",
+        "arguments":[
+          "http://www.akherkhabaronline.com/ar/1/actualites/%D9%88%D8%B7%D9%86%D9%8A%D8%A9"
+        ]
+      }
+	    
+    ]
+
+  },
+		{
+   "title":"الصباح",
+    "drawable":"",
+    "submenu":"جرائد",
+    "iap":false,
+    "tabs":[
+      {
+        "title":"WebView",
+          "provider":"webview",
+        "arguments":[
+          "http://www.assabahnews.tn/rss-feed"
+        ]
+      }
+	    
+    ]
+
+  },
+			{
+   "title":"Tunisie Numérique",
+    "drawable":"",
+    "submenu":"جرائد",
+    "iap":false,
+    "tabs":[
+      {
+        "title":"WebView",
+          "provider":"webview",
+        "arguments":[
+          "https://www.tunisienumerique.com/actualite-tunisie/politique/"
+        ]
+      }
+	    
+    ]
+
+  },
+			{
+   "title":"Business News",
+    "drawable":"",
+    "submenu":"جرائد",
+    "iap":false,
+    "tabs":[
+      {
+        "title":"WebView",
+          "provider":"webview",
+        "arguments":[
+          "http://www.businessnews.com.tn/"
+        ]
+      }
+	    
+    ]
+
+  },
+		{
+   "title":"Leaders",
+    "drawable":"",
+    "submenu":"جرائد",
+    "iap":false,
+    "tabs":[
+      {
+        "title":"WebView",
+          "provider":"webview",
+        "arguments":[
+          "http://www.leaders.com.tn/contentTopic"
+        ]
+      }
+	    
+    ]
+
+  },
+	{
+   "title":"Realites",
+    "drawable":"",
+    "submenu":"جرائد",
+    "iap":false,
+    "tabs":[
+      {
+        "title":"WebView",
+          "provider":"webview",
+        "arguments":[
+          "https://www.realites.com.tn/category/news/"
+        ]
+      }
+	    
+    ]
+
+  },
+	{
+   "title":"Huffpost Maghreb",
+    "drawable":"",
+    "submenu":"جرائد",
+    "iap":false,
+    "tabs":[
+      {
+        "title":"WebView",
+          "provider":"webview",
+        "arguments":[
+          "https://www.huffpostmaghreb.com/tunisie/"
+        ]
+      }
+	    
+    ]
+
+  },
+	{
+   "title":"أخبار موزاييك",
+    "drawable":"",
+    "submenu":"نشرات الأخبار",
+    "iap":false,
+    "tabs":[
+      {
+        "title":"WebView",
+        "provider":"webview",
+        "arguments":[
+          "https://www.mosaiquefm.net/ar/rubrique/18/flash-infos"
+        ]
+      }
+    ]
+
+  },
+		 {
+   "title":"Sport Express",
+    "drawable":"",
+    "submenu":"نشرات الأخبار",
+    "iap":false,
+    "tabs":[
+      {
+        "title":"WebView",
+        "provider":"webview",
+        "arguments":[
+          "https://www.mosaiquefm.net/ar/rubrique/2/sport-express"
+        ]
+      }
+    ]
+
+  },
+		 {
+   "title":"أخبار الاذاعة الوطنية",
+    "drawable":"",
+    "submenu":"نشرات الأخبار",
+    "iap":false,
+    "tabs":[
+      {
+        "title":"WebView",
+        "provider":"webview",
+        "arguments":[
+          "http://www.radionationale.tn/podcast-category/%D8%A7%D9%84%D9%86%D8%B4%D8%B1%D8%A7%D8%AA-%D8%A7%D9%84%D8%A5%D8%AE%D8%A8%D8%A7%D8%B1%D9%8A%D8%A9/"
         ]
       }
     ]
